Add new content

--- a/index.html
+++ b/index.html
@@ -20,5 +20,16 @@
       unseres Heimes, der Gutshof, wird durch unseren Verein “Pfadfinderheim
       Marienhöhe e.V.” ermöglicht.
     </p>
+    <h2>Was bedeutet es Pfadfinder zu sein?</h2>
+    <p>
+      PfadfinderIn zu sein bedeutet Abenteuer, Natur, Gemeinschaft,
+      Verantwortung, Spiel und Spaß.
+    </p>
+    <p>
+      Übergeordnetes Ziel ist es dabei, die Kinder und Jugendlichen zu lehren,
+      selbstständig zu denken, mit offenen Augen durch die Welt zu gehen und
+      sich der Folgen ihres Handelns für die Natur und die Gesellschaft bewusst
+      zu sein.
+    </p>
   </body>
 </html>
