Add important content

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       Pfadfinderbund (DPB) angehörig ist. Der DPB ist ein unabhängiger,
       interkonfessioneller und bündisch geprägter Pfadfinderbund.
     </p>
+    <p>Tobi ist der coolste!!!</p>
     <p>
       Pfadfinderarbeit ist komplett ehrenamtlich organisiert. Der Betrieb
       unseres Heimes, der Gutshof, wird durch unseren Verein “Pfadfinderheim
