Add new content

--- a/index.html
+++ b/index.html
@@ -31,5 +31,24 @@
       sich der Folgen ihres Handelns für die Natur und die Gesellschaft bewusst
       zu sein.
     </p>
+    <h2>Was machen wir?</h2>
+    <p>
+      Einmal pro Woche treffen sich die Jungen und Mädchen in ihren Gruppen -
+      sogenannten “Gilden” bei den Mädchen und “Horten” bei den Jungen – zum
+      “Heimabend” – unseren Gruppenstunden. Hier wird gespielt, gebastelt,
+      gewerkelt, gesungen und entdeckt. Dazu werden Pfadfindertechniken geübt,
+      die dann auf der Fahrt angewendet werden können. Die Gruppen bestehen aus
+      4 bis 8 Personen der gleichen Altersgruppe, die im Rahmen der
+      verschiedenen Tätigkeiten eine feste Gemeinschaft entwickeln, die oft ein
+      Leben lang hält. Neben den wöchentlichen Heimabenden fahren wir übers Jahr
+      verteilt auf Zeltlager. Das bedeutet Kothen aufzubauen, am Feuer zu
+      sitzen, Gitarre spielen zu lernen, sich im großen Geländespiel zu
+      beweisen, über dem Feuer zu kochen und ein ganzes Wochenende ohne
+      Smartphone zu verbringen. Je nach Altersstufe wird man aktiv in die
+      Planung und Vorbereitung dieser Zeltlager herangezogen. In den
+      Sommerferien geht es dann auf Großfahrt, welche das Highlight des gesamten
+      Jahres darstellt. Diese dauert 2-3 Wochen und führt die Gruppen in die
+      weite Welt – zu Fuß, mit dem Rad oder Kanu.
+    </p>
   </body>
 </html>
