--- a/neuigkeiten.html
+++ b/neuigkeiten.html
@@ -7,7 +7,7 @@
     <title>PfadfinderInnen Tempelhof</title>
   </head>
   <body>
-    <h1>Pfadfinder*innen in Tempelhof</h1>
+    <h1>PfadfinderInnen in Tempelhof</h1>
     <h2>Rückblick zum Sommerfest 2018</h2>
     <p>
       Was war das für ein schönes Fest! Herzlichen Dank an alle, die bei unserem
@@ -33,8 +33,6 @@
       spät in die Nacht und lasst zusammen mit uns den Abend bei Tee und Gesang
       ausklingen.
     </p>
-    <p>
-      Wir freuen uns auf Euren Besuch, die Pfadfinder*innen und der Zugvogel
-    </p>
+    <p>Wir freuen uns auf Euren Besuch, die PfadfinderInnen und der Zugvogel</p>
   </body>
 </html>
