--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>PfadfinderInnen Tempelhof</title>
   </head>
   <body>
-    <a href="neuigkeiten.html">Neuigkeiten</a>
+    <a href="/pfadfinderinnen-tempelhof/">PfadfinderInnen</a>
+    <a href="/pfadfinderinnen-tempelhof/neuigkeiten.html">Neuigkeiten</a>
+    <a href="/pfadfinderinnen-tempelhof/unsere-gruppen.html">Unsere Gruppen</a>
     <h1>PfadfinderInnen in Tempelhof</h1>
     <h2>Wer sind wir?</h2>
     <p>
