--- a/neuigkeiten.html
+++ b/neuigkeiten.html
@@ -36,5 +36,17 @@
     <p>
       Wir freuen uns auf Euren Besuch, die Pfadfinder*innen und der Zugvogel
     </p>
+    <img
+      src="images/einladung-sommerfest.jpg"
+      width="320"
+      height="280"
+      alt="Flyer zum Sommerfest 2018"
+    />
+    <img
+      src="images/rueckblick-sommerfest.jpg"
+      width="320"
+      height="280"
+      alt="Rückblick zum Sommerfest 2018"
+    />
   </body>
 </html>
