--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <a href="/pfadfinderinnen-tempelhof/">PfadfinderInnen</a>
     <a href="/pfadfinderinnen-tempelhof/neuigkeiten.html">Neuigkeiten</a>
     <a href="/pfadfinderinnen-tempelhof/unsere-gruppen.html">Unsere Gruppen</a>
+    <a href="/pfadfinderinnen-tempelhof/der-gutshof.html">Der Gutshof</a>
+    <a href="/pfadfinderinnen-tempelhof/der-verein.html">Der Verein</a>
+    <a href="/pfadfinderinnen-tempelhof/kontakt.html">Kontakt</a>
     <h1>PfadfinderInnen in Tempelhof</h1>
     <h2>Wer sind wir?</h2>
     <p>
