--- a/neuigkeiten.html
+++ b/neuigkeiten.html
@@ -7,6 +7,12 @@
     <title>PfadfinderInnen Tempelhof</title>
   </head>
   <body>
+    <a href="/pfadfinderinnen-tempelhof/">PfadfinderInnen</a>
+    <a href="/pfadfinderinnen-tempelhof/neuigkeiten.html">Neuigkeiten</a>
+    <a href="/pfadfinderinnen-tempelhof/unsere-gruppen.html">Unsere Gruppen</a>
+    <a href="/pfadfinderinnen-tempelhof/der-gutshof.html">Der Gutshof</a>
+    <a href="/pfadfinderinnen-tempelhof/der-verein.html">Der Verein</a>
+    <a href="/pfadfinderinnen-tempelhof/kontakt.html">Kontakt</a>
     <h1>PfadfinderInnen in Tempelhof</h1>
     <h2>Rückblick zum Sommerfest 2018</h2>
     <p>
